# c_glib_sdl_starter

./: .gitignore  CMakeLists.txt  firsttime.sh  readme.md  run.sh
src/: main.c
